# crypto-coin-ticker

./: Cargo.toml  README.md  config.toml.example
icons/: README.md
src/: config.rs  error.rs  exchange.rs  lib.rs  main.rs  ui.rs
