[package]
name = "okk"
version = "0.2.0"
edition = "2024"

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true




[dependencies]
# Core dependencies
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }

# Exchange API
exc = { version = "0.7.3", features = ["okx"] }
futures = "0.3.31"

# Data types
rust_decimal = "1.37.2"
chrono = "0.4.41"

# Configuration and serialization
serde = "1.0.219"
toml = "0.8.23"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# UI
tao = "0.34.0"
tray-icon = "0.21.0"
image = "0.25.6"
